@@ -105,18 +105,19 @@ check(int is_ok, uint8_t *buf, int size, size_t consumed) {
 		assert(strcmp(t.e->buf, "xyz") == 0);
 		assert(strcmp(t.f->buf, "love_it") == 0);
 
-		assert(t.g->size == 3);
-		assert(t.g->buf[0] == 2);
-		assert(t.g->buf[1] == 147);
-		assert(t.g->buf[2] != 150);
-		assert(t.g->buf[2] == 148);
+		assert(t.g->size == 2);
+		assert(t.g->bits_unused == 2);
+		printf("%d %d\n", t.g->buf[0], t.g->buf[1]);
+		assert(t.g->buf[0] == 147);
+		assert(t.g->buf[1] != 150);
+		assert(t.g->buf[1] == 148);
 
 		printf("%d\n", t.h->buf[3]);
-		assert(t.h->size == 4);
-		assert(t.h->buf[0] == 1);
-		assert(t.h->buf[1] == 140);
-		assert(t.h->buf[2] == 141);
-		assert(t.h->buf[3] == 142);
+		assert(t.h->size == 3);
+		assert(t.h->bits_unused == 1);
+		assert(t.h->buf[0] == 140);
+		assert(t.h->buf[1] == 141);
+		assert(t.h->buf[2] == 142);
 	} else {
 		if(rval.code == RC_OK) {
 			assert(t.a.size != 2
@@ -127,9 +128,9 @@ check(int is_ok, uint8_t *buf, int size, size_t consumed) {
 			|| !t.f
 			|| t.f->size != 7
 			|| !t.g
-			|| t.g->size != 3
+			|| t.g->size != 2
 			|| !t.h
-			|| t.h->size != 4
+			|| t.h->size != 3
 			);
 		}
 		fprintf(stderr, "%d %d\n", (int)rval.consumed, (int)consumed);
