@@ -256,8 +256,6 @@ ASN_MODULE_HEADERS=	\
 
 ASN_MODULE_HEADERS+=ANY.h
 ASN_MODULE_SOURCES+=ANY.c
-ASN_MODULE_HEADERS+=BIT_STRING.h
-ASN_MODULE_SOURCES+=BIT_STRING.c
 ASN_MODULE_HEADERS+=BMPString.h
 ASN_MODULE_SOURCES+=BMPString.c
 ASN_MODULE_HEADERS+=BOOLEAN.h
@@ -305,6 +303,8 @@ ASN_MODULE_HEADERS+=asn_internal.h
 ASN_MODULE_HEADERS+=asn_types.h
 ASN_MODULE_HEADERS+=OCTET_STRING.h
 ASN_MODULE_SOURCES+=OCTET_STRING.c
+ASN_MODULE_HEADERS+=BIT_STRING.h
+ASN_MODULE_SOURCES+=BIT_STRING.c
 ASN_MODULE_HEADERS+=ber_decoder.h
 ASN_MODULE_SOURCES+=ber_decoder.c
 ASN_MODULE_SOURCES+=ber_codec_prim.c
